<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".ui.main.MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="64dp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.113"
            android:textStyle="bold" android:id="@+id/textView"/>
    <Button
            android:text="@string/btStartGame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/custom_button"
            android:id="@+id/btStartGame" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="100dp"/>
    <Button
            android:text="@string/btAbout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/custom_button"
            android:id="@+id/btAbout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="88dp" app:layout_constraintTop_toBottomOf="@+id/btStartGame"/>
    <Button
            android:text="@string/btnEndGame"
            style="@style/custom_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btEndApp" android:layout_marginTop="88dp"
            app:layout_constraintTop_toBottomOf="@+id/btAbout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintHorizontal_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>