<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.game.GameActivity"
        android:background="@color/backgroundColor">
    <TextView
            android:text="TextView"
            tools:text="Jose Javier"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPlayerGame"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="42dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"/>
    <TextView
            android:text="@string/lbVictories"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/tvPlayerGame"
            android:layout_marginTop="32dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/tvDefeats"
            app:layout_constraintHorizontal_chainStyle="spread_inside"/>
    <TextView
            android:text="@string/tvDefeats"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDefeats" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPlayerGame" android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:text="TextView"
            style="@style/label_style"
            tools:text="2"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="70sp"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvVictoryNumber" app:layout_constraintStart_toStartOf="@+id/textView4"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintEnd_toEndOf="@+id/textView4"
            android:textStyle="bold"/>
    <TextView
            android:text="TextView"
            style="@style/label_style"
            tools:text="1"
            android:textSize="70sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDefeatsNumber"
            app:layout_constraintTop_toTopOf="@+id/tvVictoryNumber"
            app:layout_constraintBottom_toBottomOf="@+id/tvVictoryNumber"
            app:layout_constraintStart_toStartOf="@+id/tvDefeats" app:layout_constraintEnd_toEndOf="@+id/tvDefeats"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/tvAndroid"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAndroid" app:layout_constraintStart_toStartOf="@+id/tvDefeatsNumber"
            app:layout_constraintEnd_toEndOf="@+id/tvDefeatsNumber"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintBottom_toBottomOf="@+id/tvYou" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDefeatsNumber"/>
    <TextView
            android:text="@string/tvYou"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvYou" app:layout_constraintStart_toStartOf="@+id/tvVictoryNumber"
            app:layout_constraintEnd_toEndOf="@+id/tvVictoryNumber" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/tvVictoryNumber"/>
    <TextView
            tools:text="Status da Rodada"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRoundResult" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/ivPlayer"/>
    <ImageView
            android:src="@drawable/papel"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/ivPlayer" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvYou" app:layout_constraintStart_toStartOf="@+id/tvYou"
            app:layout_constraintEnd_toEndOf="@+id/tvYou"/>
    <ImageView
            android:src="@drawable/pedra"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/ivAndroid" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAndroid" app:layout_constraintEnd_toEndOf="@+id/tvAndroid"
            app:layout_constraintStart_toStartOf="@+id/tvAndroid"/>
    <ImageView
            android:src="@drawable/papel"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/ivPaper" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/ivFist" android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/tvRoundResult"
            app:layout_constraintHorizontal_bias="0.5"/>
    <ImageView
            android:src="@drawable/pedra"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/ivFist" app:layout_constraintEnd_toStartOf="@+id/ivVictory"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/ivPaper" app:layout_constraintBottom_toBottomOf="@+id/ivPaper"
            app:layout_constraintStart_toEndOf="@+id/ivPaper" app:layout_constraintHorizontal_bias="0.5"/>
    <ImageView
            android:src="@drawable/tesoura"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/ivVictory" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/ivPaper" app:layout_constraintBottom_toBottomOf="@+id/ivPaper"
            app:layout_constraintStart_toEndOf="@+id/ivFist" app:layout_constraintHorizontal_bias="0.5"/>
</androidx.constraintlayout.widget.ConstraintLayout>